fix: hide horizontal scroll

--- a/styles/global.css
+++ b/styles/global.css
@@ -2,6 +2,18 @@
   object-fit: cover;
 }
 
+html {
+  width: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
+body {
+  width: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 img {
   max-width: 100%;
 }
